# cerebrasgemma4

./: .env.example  .gitignore  AGENTS.md  LICENSE  LICENSE.apache-2.0  README.md  pyproject.toml
.grok/rules/: hackathon.md
.grok/skills/gemma-4-cerebras/: SKILL.md
docs/: Gemma 4 Hackathon.md  hackathon-submission.md
scripts/: chat.py  run_api.py
src/cerebrasgemma4/: __init__.py  export.py  images.py  llm.py
src/cerebrasgemma4/api/: __init__.py  main.py  schemas.py
src/cerebrasgemma4/api/routes/: chat.py  convert.py  jobs.py
src/cerebrasgemma4/api/static/: app.css  app.js  index.html
src/cerebrasgemma4/pipeline/: __init__.py  chapters.py  charts.py  charts_followup.py  chat_store.py  context.py  demo.py  frames.py  ingest.py  jobs.py  options.py  orchestrator.py  perf.py  rate_limit.py  transcript.py
src/cerebrasgemma4/pipeline/gemma/: __init__.py  analyze.py  chat.py  compose.py  scout.py  scout_strategy.py  series.py
tests/: test_api.py  test_chapters.py  test_charts.py  test_chat.py  test_compose.py  test_context.py  test_export.py  test_frames.py  test_images.py  test_jobs.py  test_options.py  test_perf.py  test_pipeline_mock.py  test_probe_api.py  test_rate_limit.py  test_scout.py  test_scout_strategy.py  test_series.py  test_transcript.py  test_youtube_metadata.py
