[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebrasgemma4"
version = "0.1.0"
description = "Gemma 4 31B on Cerebras Inference — hackathon project"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12"
dependencies = [
    "cerebras-cloud-sdk>=1.67.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "youtube-transcript-api>=0.6.0",
    "markdown>=3.7",
    "matplotlib>=3.8.0",
    "xhtml2pdf>=0.2.16",
]

[project.optional-dependencies]
transcribe = ["faster-whisper>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools.packages.find]
where = ["src"]